<resources>

    <string name="app_name">Neat</string>
    <string name="settings">Settings</string>
    <string name="log_out">Sign out</string>
    <string name="pay">Pay</string>
    <string name="see_all">See all</string>
    <string name="see_all_drinks">See all drinks</string>
    <string name="pending_products_title">Ready to order</string>
    <string name="pending_products_empty">Nothing on the queue!</string>
    <string name="pending_products_subtitle">Select the products you would like to order and they will show up here</string>
    <string name="requested_items">Already ordered</string>
    <string name="requested_products_empty">No products have been ordered yet</string>
    <string name="requested_products_info">The products you order will show up here</string>
    <string name="order">Order</string>
    <string name="order_num_items">Order %d items</string>
    <string name="undo">Cancel</string>
    <string name="on_the_way">On the way!</string>
    <string name="on_the_way_long">The products you selected have been ordered</string>
    <string name="products_requested">%1$d products have already been requested</string>
    <string name="loading">Loading</string>
    <string name="table_participants">In table %1$s %2$s</string>
    <string name="add_to_pending_orders">Add to orders queue</string>
    <string name="orders_button_tooltip">Tap the orders button to place your order when you are ready!</string>
    <string name="add_a_note">Add a note (not spicy, extra sauce, etc.)</string>
    <string name="error_placing_orders">Error placing orders</string>
    <string name="add_new_card">Add new card</string>
    <string name="payment_method">Payment method</string>

</resources>
