<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/orders_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/larger_padding"
    android:transitionName="orders_layout">

    <ImageView
        android:id="@+id/caret"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_padding"
        android:layout_marginTop="@dimen/larger_padding"
        android:rotation="180"
        android:transitionName="caret"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_caret_up_white" />

    <ImageView
        android:id="@+id/orders_image"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:layout_marginTop="@dimen/large_padding"
        android:transitionName="pending_order_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caret"
        app:srcCompat="@drawable/ic_check_circle_24dp" />

    <TextView
        android:id="@+id/ordered_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_padding"
        android:text="@string/on_the_way"
        android:textAppearance="@style/Text.Header.White"
        android:transitionName="pending_order_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orders_image" />

    <TextView
        android:id="@+id/ordered_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/large_padding"
        android:layout_marginStart="@dimen/large_padding"
        android:layout_marginTop="@dimen/default_padding"
        android:text="@string/on_the_way_long"
        android:textAlignment="center"
        android:textAppearance="@style/Text.White"
        android:transitionName="pending_order_subtitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ordered_title" />

    <Button
        android:id="@+id/undo_button"
        style="@style/Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/large_padding"
        android:text="@string/undo"
        android:textColor="@color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ordered_subtitle" />

</android.support.constraint.ConstraintLayout>